--- a/Collab/index.html
+++ b/Collab/index.html
@@ -6,6 +6,9 @@
     <title>Esercizio condiviso</title>
 </head>
 <body>
+
+    <h1>esercizio collaborativo</h1>
+    <div>questo lavoro è stato fatto in gruppo</div>
     
 </body>
 </html>
