--- a/Collab/customer.html
+++ b/Collab/customer.html
@@ -9,7 +9,7 @@
 <body>
 
     <h1>clienti</h1>
-    <div>
+    <div class="div-customer">
         <h2>nome e cognome</h2>
         <p>questo div contiene i dati di un cliente</p>
     </div>
