--- a/Collab/index.html
+++ b/Collab/index.html
@@ -10,6 +10,7 @@
 
     <h1>esercizio collaborativo</h1>
     <div>questo lavoro è stato fatto in gruppo</div>
+    <a href="customer.html">vai a index</a>
     
 </body>
 </html>
